--- a/styles/style.css
+++ b/styles/style.css
@@ -13,4 +13,68 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--primary-font-family), Arial, sans-serif;
+  font-variation-settings: "wght" var(--primary-font-weight, 410);
+  background-image: var(--page-background-image);
+  background-attachment: fixed;
+  place-items: center;
+}
+
+.header {
+  display: grid;
+  margin-block: 100px clamp(0px, -130.28px + 34.74vw, 370px);
+  /* justify-self: center; */
+  gap: 20px;
+  font-family: var(--accent-font-family), Arial, sans-serif;
+  font-weight: var(--secondary-font-weight, 400);
+  inline-size: var(--content-width, clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem)); /* использован clamp для исключения медиа-запросов */
+  min-inline-size: 375px;
+  background-color: var(--content-bg-color, #fff);
+  padding: clamp(122px, 119.18px + 0.75vw, 130px) clamp(16px, -21.50px + 10.00vw, 122.5px);
+  outline: 2px #000 solid;
+  /* padding: calc(clamp(122px, 119.18px + 0.75vw, 130px) - 2px) calc(clamp(16px, -21.50px + 10.00vw, 122.5px) - 2px);
+  border: 2px #000 solid; */
+  text-align: center;
+}
+
+.header__title {
+  font-size: var(--header-title-font-size, clamp(3.0625rem, 2.71rem + 1.50vw, 4.0625rem));
+  text-transform: uppercase;
+}
+
+.header__subtitle {
+  font-size: var(--header-subtitle-font-size, clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem));
+  text-transform: uppercase;
+}
+
+.content {
+
+}
+
+.content__cards-list {
+
+}
+
+.content__cards-list-item {
+
+}
+
+.card__title {
+
+}
+
+.card__image {
+
+}
+
+.card__label {
+
+}
+
+.card__paragraph-wrapper {
+
+}
+
+.card__paragraph {
+  
 }
