--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,7 +2,28 @@
 
 :root {
 /* Шрифты */
-  --primary-font-family: "Inter-Variable", Arial, sans-serif;
-  --accent-font-family: "PressStart2P", Arial, sans-serif;
+  --primary-font-family: "Inter-Variable";
+  --accent-font-family: "PressStart2P";
+  --primary-font-weight: 410;
+  --secondary-font-weight: 400;
+  --card-title-font-weight: 715;
+  --header-title-font-size: clamp(3.0625rem, 2.71rem + 1.50vw, 4.0625rem);
+  --header-subtitle-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
 
+  --content-width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+
+  --page-background-image:
+    repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px),
+
+    repeating-linear-gradient(
+      to bottom,
+      #d3d3d3 0 2px,
+      transparent 2px 4px),
+
+    repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
+
+    --content-bg-color: #fff;
 }
