--- a/styles/style.css
+++ b/styles/style.css
@@ -30,10 +30,10 @@
   inline-size: var(--content-width, clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem)); /* использован clamp для исключения медиа-запросов */
   min-inline-size: 375px;
   background-color: var(--content-bg-color, #fff);
-  padding: clamp(122px, 119.18px + 0.75vw, 130px) clamp(16px, -21.50px + 10.00vw, 122.5px);
-  outline: 2px #000 solid;
-  /* padding: calc(clamp(122px, 119.18px + 0.75vw, 130px) - 2px) calc(clamp(16px, -21.50px + 10.00vw, 122.5px) - 2px);
-  border: 2px #000 solid; */
+  /* padding: clamp(122px, 119.18px + 0.75vw, 130px) clamp(16px, -21.50px + 10.00vw, 122.5px); */
+  /* outline: 2px #000 solid; */
+  padding: calc(clamp(122px, 119.18px + 0.75vw, 130px) - 2px) calc(clamp(16px, -21.50px + 10.00vw, 122.5px) - 2px);
+  border: 2px #000 solid;
   text-align: center;
 }
 
@@ -48,7 +48,11 @@
 }
 
 .content {
-
+  display: grid;
+  place-items: center;
+  gap: 50px;
+  inline-size: var(--content-width, clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem)); /* использован clamp для исключения медиа-запросов */
+  margin-block-end: 100px;
 }
 
 .content__cards-list {
@@ -64,19 +68,22 @@
 .card {
   background-color: var(--content-bg-color, #fff);
   border: 2px #000 solid;
-  inline-size: var(--content-width, clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem)); /* использован clamp для исключения медиа-запросов */
-  min-inline-size: 375px;
+  /* inline-size: 100%;
+  min-inline-size: 375px; */
 }
 
 .card__title {
   font-size: var(--card-font-size, 1.125rem);
   font-variation-settings: "wght" var(--card-title-font-weight, 715);
-  padding: 4px 10px;
+  padding: 5.5px 10px;
+  border-block-end: 2px #000 solid;
+  line-height: 120%;
 }
 
 .card_image-wrapper {
   position: relative;
-  block-size: var(--content-width);
+  block-size: calc(var(--content-width) - 4px);
+  aspect-ratio: 1 / 1;
 }
 
 .card__image {
@@ -112,6 +119,7 @@
   display: grid;
   gap: 25px;
   padding: 25px;
+  border-block-start: 2px #000 solid;
 }
 
 .card__paragraph {
@@ -150,7 +158,7 @@
 }
 
 .sparks {
-
+  opacity: 0;
 }
 
 .card__like-button {
@@ -166,9 +174,79 @@
   background-color: var(--content-bg-color, #fff);
   font-size: 0.875rem;
   transition: box-shadow 0.3s ease;
+  /* position: relative; */
   cursor: pointer;
 }
 
 .button__text {
+  
+}
 
+.save-button {
+  inline-size: var(--save-button-width, clamp(306px, 295.79px + 2.72vw, 335px));
+  inline-size: var(--save-button-width, clamp(306px, 295.79px + 2.72vw, 335px));
+  padding: 15px 18px;
+}
+
+.save-button__content {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  gap: 8px;
+}
+
+.save-button__content svg {
+  inline-size: 28px;
+  fill: #fff;
+  /* justify-self: start; */
+}
+
+@media (width >= 1440px) {
+  .card__title {
+    padding: 5.4px 10px;
+  }
+
+  .save-button__content {
+    flex-direction: row;
+  }
+
+  .save-button__content svg {
+    inline-size: 21px;
+  }
+}
+
+.save-dialog {
+  inline-size: clamp(341px, 336.77px + 1.13vw, 353px);
+  padding: 30px clamp(30px, 43.52px + -0.94vw, 40px);
+
+}
+
+.save-dialog[open] {
+  display: grid;
+  gap: 30px;
+}
+
+.dialog-content {
+  display: flex;
+  gap: 20px;
+  place-items: center;
+}
+
+.dialog-content-svg {
+  place-self: center;
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+.dialog-content-text {
+  font-family: var(--accent-font-family);
+  font-size: 0.875rem;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+.dialog-button {
+  inline-size: 100%;
+  padding: 12.5px;
+  text-transform: uppercase;
 }
