--- a/styles/style.css
+++ b/styles/style.css
@@ -23,15 +23,11 @@
 .header {
   display: grid;
   margin: 100px clamp(0px, -130.28px + 34.74vw, 370px);
-  /* justify-self: center; */
   gap: 20px;
   font-family: var(--accent-font-family), Arial, sans-serif;
   font-weight: var(--secondary-font-weight, 400);
-  inline-size: var(--content-width, clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem)); /* использован clamp для исключения медиа-запросов */
-  min-inline-size: 375px;
+  inline-size: var(--content-width, clamp(375px, 260.56px + 30.52vw, 700px));
   background-color: var(--content-bg-color, #fff);
-  /* padding: clamp(122px, 119.18px + 0.75vw, 130px) clamp(16px, -21.50px + 10.00vw, 122.5px); */
-  /* outline: 2px #000 solid; */
   padding: calc(clamp(122px, 119.18px + 0.75vw, 130px) - 2px) calc(clamp(16px, -21.50px + 10.00vw, 122.5px) - 2px);
   border: 2px #000 solid;
   text-align: center;
@@ -51,25 +47,18 @@
   display: grid;
   place-items: center;
   gap: 50px;
-  inline-size: var(--content-width, clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem)); /* использован clamp для исключения медиа-запросов */
+  inline-size: var(--content-width, clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem));
   margin-block-end: 100px;
 }
 
 .content__cards-list {
   display: grid;
   gap: 50px;
-
-}
-
-.content__cards-list-item {
-
 }
 
 .card {
   background-color: var(--content-bg-color, #fff);
   border: 2px #000 solid;
-  /* inline-size: 100%;
-  min-inline-size: 375px; */
 }
 
 .card__title {
@@ -159,7 +148,6 @@
   justify-self: end;
   display: flex;
   align-items: end;
-  /* gap: 4px; */
 }
 
 .card__icon-button {
@@ -203,8 +191,8 @@
   content: "";
   position: absolute;
   inset: 0;
-  background: black;
-  transition:0.5s ease-in-out;
+  background: #000;
+  transition: 0.5s ease-in-out;
   transform: translateX(-100%);
 }
 
@@ -212,31 +200,68 @@
   transform: translateX(0);
 }
 
-.button__text {
-  position: relative;
-  z-index: 1;
-  mix-blend-mode: difference;
-  color: #fff;
-}
-
-.heart {
-
-}
-
 .contour {
-
+  fill: var(--heart-contour-color);
+  transition: fill 0.1s linear;
 }
 
 .main-body {
-
+  fill: transparent;
+  transition: fill 0.3s linear 0s;
 }
 
 .core {
-
+  fill: transparent;
+  transition: fill 0.3s linear 0.03s;
 }
 
 .sparks {
   opacity: 0;
+}
+
+.like-icon:hover .core {
+  fill: var(--heart-contour-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--heart-contour-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0s;
+}
+
+.like-icon:active .main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .core {
+  transition: fill 0.3s linear 0s;
+  fill: var(--animation-fill-color);
+}
+
+.like-icon.is-liked .main-body {
+  transition: fill 0.3s linear 0.05s;
+  fill: var(--animation-fill-color);
+}
+
+.like-icon.is-liked .heart {
+  transform-origin: center;
+  animation: like-scale 0.3s ease-in 0.1s 1;
+}
+
+.like-icon.is-liked .contour {
+  transition: fill 0.3s linear 0.06s;
+  fill: var(--animation-fill-color);
+  transform-origin: center;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks-opacity 0.3s ease-in 0.3s 1;
 }
 
 .card__like-button {
@@ -246,8 +271,14 @@
   cursor: pointer;
 }
 
+.button__text {
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+  color: #fff;
+}
+
 .save-button {
-  inline-size: var(--save-button-width, clamp(306px, 295.79px + 2.72vw, 335px));
   inline-size: var(--save-button-width, clamp(306px, 295.79px + 2.72vw, 335px));
   padding: 15px 18px;
 }
@@ -262,7 +293,6 @@
 .save-button__content svg {
   inline-size: 28px;
   fill: #fff;
-  /* justify-self: start; */
 }
 
 @media (width >= 1440px) {
@@ -305,6 +335,7 @@
   place-self: center;
   min-inline-size: 39px;
   block-size: 39px;
+  fill: #000;
 }
 
 .dialog-content-text {
